added get users api and created frontend
