# backend/docs/swagger.yaml
@@ -100,6 +100,17 @@ definitions:
       title:
         type: string
     type: object
+  models.User:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -480,6 +491,30 @@ paths:
       summary: Update a task
       tags:
       - tasks
+  /users:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves all users.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.User'
+            type: array
+        "401":
+          description: Unauthenticated
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: List users
+      tags:
+      - users
 securityDefinitions:
   BearerAuth:
     description: Type "Bearer " followed by your token.
